# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  25 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    New variable RC_ULIMIT applies ulimit commands before starting a service.
    This should be configured in /etc/conf.d/foo for service foo, but can also
    be configured in /etc/conf.d/rc on a global basis.
    RC_DAEMON now works in a similar way, instead of RC_DAEMON_foo.
    Fixes, #120151.

  24 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Dependant services are restarted correctly when the restarted
    service is started and not inactive, #120154.

  21 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that CRITICAL_SERVICES are in the boot runlevel, #117912.

* baselayout-1.12.0_pre15 (20 Jan 2006)

  20 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Fix quoting in iwconfig, #119629.
    Fix process pid selection in rc-daemon.sh, #119631.
    Both of the above thanks to Dominik Buerkle.

    init scripts no longer run during the sysinit runlevel, #118419.
    Thanks to Greg KH and the Linux Hotplug mailing list for advice.

  19 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Give a better error message when no valid DHCP client is installed.

  18 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Services should not get stuck in rc anymore, #119233, #119242.

    We only hotplug net.* scripts on interfaces that are marked as ethernet.

  16 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Renamed restart in $svcdir to scheduled as it makes much more sense.

    Interfaces names with a dot in them now work.

  14 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Changed runscript.sh to store it's services to restart like rc.

* baselayout-1.12.0_pre14 (13 Jan 2006)

  13 Jan 2006; Mike Frysinger <vapier@gentoo.org>:

    Filter all of fuse as network based since there's no way for us to know
    if the thing is local or not #118552 by Pete Ezzo.'
