@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  26 Jan 2006; Mike Frysinger <vapier@gentoo.org>:
+
+    Add fixes by Robert Millan to consoletype so that it's more portable #80021.
+
   25 Jan 2006; Roy Marples <uberlord@gentoo.org>:
 
     New variable RC_ULIMIT applies ulimit commands before starting a service.
